fix: consistent color, still buggy